; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_msiquery.c_MSI_DatabaseGetPrimaryKeys.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_msiquery.c_MSI_DatabaseGetPrimaryKeys.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }
%struct.msi_primary_key_record_info = type { %struct.TYPE_7__*, i64 }
%struct.TYPE_8__ = type { i32 }

@MSI_DatabaseGetPrimaryKeys.sql = internal constant [46 x i8] c"select * from `_Columns` where `Table` = '%s'\00", align 16
@ERROR_INVALID_TABLE = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@msi_primary_key_iterator = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Found %d primary keys\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @MSI_DatabaseGetPrimaryKeys(i32* %0, i32 %1, %struct.TYPE_7__** %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_7__**, align 8
  %8 = alloca %struct.msi_primary_key_record_info, align 8
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store %struct.TYPE_7__** %2, %struct.TYPE_7__*** %7, align 8
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %9, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @TABLE_Exists(i32* %11, i32 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %17, label %15

15:                                               ; preds = %3
  %16 = load i64, i64* @ERROR_INVALID_TABLE, align 8
  store i64 %16, i64* %4, align 8
  br label %65

17:                                               ; preds = %3
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i64 @MSI_OpenQuery(i32* %18, %struct.TYPE_8__** %9, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @MSI_DatabaseGetPrimaryKeys.sql, i64 0, i64 0), i32 %19)
  store i64 %20, i64* %10, align 8
  %21 = load i64, i64* %10, align 8
  %22 = load i64, i64* @ERROR_SUCCESS, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i64, i64* %10, align 8
  store i64 %25, i64* %4, align 8
  br label %65

26:                                               ; preds = %17
  %27 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 1
  store i64 0, i64* %27, align 8
  %28 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 0
  store %struct.TYPE_7__* null, %struct.TYPE_7__** %28, align 8
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %30 = load i32, i32* @msi_primary_key_iterator, align 4
  %31 = call i64 @MSI_IterateRecords(%struct.TYPE_8__* %29, i32 0, i32 %30, %struct.msi_primary_key_record_info* %8)
  store i64 %31, i64* %10, align 8
  %32 = load i64, i64* %10, align 8
  %33 = load i64, i64* @ERROR_SUCCESS, align 8
  %34 = icmp eq i64 %32, %33
  br i1 %34, label %35, label %60

35:                                               ; preds = %26
  %36 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 1
  %37 = load i64, i64* %36, align 8
  %38 = call i32 @TRACE(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0), i64 %37)
  %39 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 1
  %40 = load i64, i64* %39, align 8
  %41 = call %struct.TYPE_7__* @MSI_CreateRecord(i64 %40)
  %42 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 0
  store %struct.TYPE_7__* %41, %struct.TYPE_7__** %42, align 8
  %43 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 1
  store i64 0, i64* %43, align 8
  %44 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %45 = load i32, i32* @msi_primary_key_iterator, align 4
  %46 = call i64 @MSI_IterateRecords(%struct.TYPE_8__* %44, i32 0, i32 %45, %struct.msi_primary_key_record_info* %8)
  store i64 %46, i64* %10, align 8
  %47 = load i64, i64* %10, align 8
  %48 = load i64, i64* @ERROR_SUCCESS, align 8
  %49 = icmp eq i64 %47, %48
  br i1 %49, label %50, label %54

50:                                               ; preds = %35
  %51 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 0
  %52 = load %struct.TYPE_7__*, %struct.TYPE_7__** %51, align 8
  %53 = load %struct.TYPE_7__**, %struct.TYPE_7__*** %7, align 8
  store %struct.TYPE_7__* %52, %struct.TYPE_7__** %53, align 8
  br label %59

54:                                               ; preds = %35
  %55 = getelementptr inbounds %struct.msi_primary_key_record_info, %struct.msi_primary_key_record_info* %8, i32 0, i32 0
  %56 = load %struct.TYPE_7__*, %struct.TYPE_7__** %55, align 8
  %57 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %56, i32 0, i32 0
  %58 = call i32 @msiobj_release(i32* %57)
  br label %59

59:                                               ; preds = %54, %50
  br label %60

60:                                               ; preds = %59, %26
  %61 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %62 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %61, i32 0, i32 0
  %63 = call i32 @msiobj_release(i32* %62)
  %64 = load i64, i64* %10, align 8
  store i64 %64, i64* %4, align 8
  br label %65

65:                                               ; preds = %60, %24, %15
  %66 = load i64, i64* %4, align 8
  ret i64 %66
}

declare dso_local i32 @TABLE_Exists(i32*, i32) #1

declare dso_local i64 @MSI_OpenQuery(i32*, %struct.TYPE_8__**, i8*, i32) #1

declare dso_local i64 @MSI_IterateRecords(%struct.TYPE_8__*, i32, i32, %struct.msi_primary_key_record_info*) #1

declare dso_local i32 @TRACE(i8*, i64) #1

declare dso_local %struct.TYPE_7__* @MSI_CreateRecord(i64) #1

declare dso_local i32 @msiobj_release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
